--- a/src/main/webapp/categories.html
+++ b/src/main/webapp/categories.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Categories</title>
-    <link rel="stylesheet" href="styles/category.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Wallet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/category.css">
+    <script src="script/categories.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
 
 <body onload="getCategories()">
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid row">
-            <a class="navbar-brand col-4 fs-3 text-success" href="index.html">
-                <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
-            </a>
-            <div class="col-8 d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-md btn-outline-primary btn-transparent d-flex">Search<span
-                        class="bi bi-search ps-1"></span></button>
-            </div>
+<nav class="navbar navbar-expand-lg shadow bg-white" id="navmain">
+    <div class="container-fluid row">
+        <a class="navbar-brand col-4 fs-3" href="index.html">
+            <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
+        </a>
+        <div class="col-8 d-flex text-end">
+            <h3 class="">Jayalakshmi</h3>
+            <button type="button" class="btn btn-transparent" onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
         </div>
-    </nav>
-    <div class="row ps-2">
-        <div class="col-2">
-            <nav class="nav flex-column fs-5">
-                <a class="nav-link pb-3" href="index.html"><span class="bi bi-house-door pe-2"></span>Home</a>
-                <a class="nav-link pb-3" href="income.html"><span
-                        class='bi bi-arrow-down-left-circle-fill pe-2'></span>Income</a>
-                <a class="nav-link pb-3" href="expenditure.html"><span
-                        class='bi bi-arrow-up-right-circle-fill pe-2'></span>Expenditure</a>
-                <a class="nav-link pb-3" href="savings.html"><span class='bi bi-piggy-bank pe-2'></span>Savings</a>
-                <a class="nav-link pb-3" href="dashboard.html"><span class='bi bi-bar-chart-fill pe-2'></span>Dashboard</a>
-                <a class="nav-link pb-3" href="categories.html"><span class='bi bi-card-list pe-2'></span>Categories</a>
-                <a class="nav-link pb-3" href="investment.html"><span
-                        class='bi bi-cash-coin pe-2'></span>Investments</a>
-                <a class="nav-link pb-3" href="dependent.html"><span
-                        class="bi bi-person-circle pe-2"></span>Dependents</a>
-                <a class="nav-link pb-3" href="insights.html"><span
-                        class='bi bi-graph-up-arrow pe-2'></span>Insights</a>
-            </nav>
+    </div>
+</nav>
+<div class=" shadow bg-white rounded bg-transparent " id="bodymain">
+<div class="row ps-2 mx-2">
+    <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
+        <nav class="nav flex-column fs-5">
+            <a class="nav-link pb-3 " href="index.html"><span
+                    class="bi bi-house-door pe-2"></span>Home</a>
+            <a class="nav-link pb-3" href="income.html"><span class='bi bi-arrow-down-left-circle-fill pe-2'></span>Income</a>
+            <a class="nav-link pb-3" href="expenditure.html"><span class='bi bi-arrow-up-right-circle-fill pe-2'></span>Expenditure</a>
+            <a class="nav-link pb-3" href="savings.html"><span class='bi bi-piggy-bank pe-2'></span>Savings</a>
+            <a class="nav-link pb-3" href="dashboard.html"><span class='bi bi-bar-chart-fill pe-2'></span>Dashboard</a>
+            <a class="nav-link pb-3" href="categories.html"><span class='bi bi-card-list pe-2'></span>Categories</a>
+            <a class="nav-link pb-3" href="investment.html"><span class='bi bi-cash-coin pe-2'></span>Investments</a>
+            <a class="nav-link pb-3" href="dependent.html"><span class="bi bi-person-circle pe-2"></span>Dependents</a>
+            <a class="nav-link pb-3" href="insights.html"><span class='bi bi-graph-up-arrow pe-2'></span>Insights</a>
+        </nav>
         </div>
 
         <div class="col-10">
-            <div id="formincomemain" style="" class="m-3 shadow p-3 mb-5 me-3 bg-body rounded">
+            <div id="formincomemain" style="display:none" class="m-3shadow p-3 mb-5 me-3 bg-body rounded">
                 <form>
                     <h4 class="text-center pb-3">Add Income Category</h4>
                     <div class="mb-3">
@@ -52,7 +51,7 @@
                     <button type="submit" class="btn btn-primary" onclick="submitIncomeCategory()"><span class="bi bi-plus"></span>Add</button>
                 </form>
             </div>
-            <div id="formexpendituremain" style="" class="m-3 shadow p-3 mb-5 me-3 bg-body rounded">
+            <div id="formexpendituremain" style="display:none" class="m-3 shadow p-3 mb-5 me-3 bg-body rounded">
                 <form>
                     <h4 class="text-center pb-3">Add Expenditure Category</h4>
                     <div class="mb-3">
@@ -62,22 +61,56 @@
                     <button type="submit" class="btn btn-primary" onclick="submitExpenditureCategory()"><span class="bi bi-plus"></span>Add</button>
                 </form>
             </div>
-            <div id="categorymain" class="m-3 p-3 shadow p-3 mb-5 me-3 bg-body rounded">-->
-              <div id="incomecategory" class="row pb-5">-->
-                 <div class="col-6"><h2 class="pb-3 p-1 text-center text-primary fs-4">Income Categories</h2></div>-->
-<!--                  <div class="col-6"><button type="button" class="col-6 btn btn-md btn-outline-warning text-end" onclick="addIncomeCategory()">Add Category</button></div>-->
-
+            <div id="categorymain" class="ps-5">
+              <div id="incomecategory" class="row py-5 shadow p-3 mb-5 me-3 bg-body rounded">
+                 <div class="col-6"><h2 class=" ps-3 text-primary fs-4">Income Categories</h2></div>
+                  <div class="col-6 text-end pe-3"><button type="button" class="col-6 btn btn-md btn-outline-primary" onclick="addIncomeCategory()">Add Category</button></div>
+                  <div class="table-responsive py-3 ">
+                      <table class="table table-hover ">
+                          <thead class="">
+                          <tr>
+                              <th scope="col">S.No</th>
+                              <th scope="col">Category Name</th>
+                              <th scope="col">Disable</th>
+                          </tr>
+                          </thead>
+                          <tbody id="tableIncomeCategory" >
+                          </tbody>
+                      </table>
+                  </div>
               </div>
-                <div id="expenditurecategory" class="row">
-                    <div class="col-6"><h2 class="pb-3 p-1 text-center text-primary fs-4">Expenditure Categories</h2></div>
-<!--              <div class="col-6"><button type="button" class="col-6 btn btn-md btn-outline-warning text-end" onclick="addExpenditureCategory()">Add Category</button></div>-->
+                <div id="expenditurecategory" class="row py-5 shadow p-3 mb-5 me-3 bg-body rounded">
+                    <div class="col-6 "><h2 class=" text-primary fs-4">Expenditure Categories</h2></div>
+              <div class="col-6 text-end"><button type="button" class="col-6 btn btn-md btn-outline-primary " onclick="addExpenditureCategory()">Add Category</button></div>
+                    <div class="table-responsive py-3 ">
+                        <table class="table table-hover ">
+                            <thead class="">
+                            <tr>
+                                <th scope="col">S.No</th>
+                                <th scope="col">Category Name</th>
+                                <th scope="col">Disable</th>
+                            </tr>
+                            </thead>
+                            <tbody id="tableExpenditureCategory" >
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 <!-- <button class="btn btn-lg btn-outline-primary" onclick="getCategories()">getCategories</button> -->
    </div>
         </div>
     </div>
     </div>
+</div>
     <script src="script/categories.js"></script>
+<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("1rzM6lv9hj6EFg2SP");
+   })();
+</script>
 </body>
 
 </html>
