--- a/src/main/webapp/expenditure.html
+++ b/src/main/webapp/expenditure.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
-
 <head>
-    <title>Expenditure</title>
-    <script src="script/expenditure.js"></script>
-    <link rel="stylesheet" href="styles/mystyles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Wallet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/expenditure.css">
+    <script src="script/expenditure.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
-
-<body onload="getExpenditure()">
-<nav class="navbar navbar-expand-lg">
+<body  onload="getExpenditure()">
+<nav class="navbar navbar-expand-lg shadow bg-white" id="navmain">
     <div class="container-fluid row">
-        <a class="navbar-brand col-4 fs-3 text-success" href="index.html">
-            <img class="brandlogo" src="images/brand.png" alt="brandlogo"/>Wallet
+        <a class="navbar-brand col-4 fs-3" href="index.html">
+            <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
         </a>
-        <div class="col-8 d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-md btn-outline-primary btn-transparent d-flex">Search<span
-                    class="bi bi-search ps-1"></span></button>
+        <div class="col-8 d-flex text-end">
+            <h3 class="">Jayalakshmi</h3>
+            <button type="button" class="btn btn-transparent"  onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
         </div>
     </div>
 </nav>
-<div class="row ps-2">
-    <div class="col-2">
-        <nav class="nav flex-column fs-5">
-            <a class="nav-link pb-3" href="index.html"><span class="bi bi-house-door pe-2"></span>Home</a>
-            <a class="nav-link pb-3" href="income.html"><span
-                    class='bi bi-arrow-down-left-circle-fill pe-2'></span>Income</a>
-            <a class="nav-link pb-3" href="expenditure.html"><span
-                    class='bi bi-arrow-up-right-circle-fill pe-2'></span>Expenditure</a>
-            <a class="nav-link pb-3" href="savings.html"><span class='bi bi-piggy-bank pe-2'></span>Savings</a>
-            <a class="nav-link pb-3" href="dashboard.html"><span class='bi bi-bar-chart-fill pe-2'></span>Dashboard</a>
-            <a class="nav-link pb-3" href="categories.html"><span class='bi bi-card-list pe-2'></span>Categories</a>
-            <a class="nav-link pb-3" href="investment.html"><span class='bi bi-cash-coin pe-2'></span>Investments</a>
-            <a class="nav-link pb-3" href="dependent.html"><span class="bi bi-person-circle pe-2"></span>Dependents</a>
-            <a class="nav-link pb-3" href="insights.html"><span class='bi bi-graph-up-arrow pe-2'></span>Insights</a>
-        </nav>
-    </div>
+<div class=" shadow  bg-white rounded bg-transparent " id="bodymain">
+    <div class="row ps-2 mx-2">
+        <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
+            <nav class="nav flex-column fs-5">
+                <a class="nav-link pb-3 " href="index.html"><span
+                        class="bi bi-house-door pe-2"></span>Home</a>
+                <a class="nav-link pb-3" href="income.html"><span class='bi bi-arrow-down-left-circle-fill pe-2'></span>Income</a>
+                <a class="nav-link pb-3" href="expenditure.html"><span class='bi bi-arrow-up-right-circle-fill pe-2'></span>Expenditure</a>
+                <a class="nav-link pb-3" href="savings.html"><span class='bi bi-piggy-bank pe-2'></span>Savings</a>
+                <a class="nav-link pb-3" href="dashboard.html"><span class='bi bi-bar-chart-fill pe-2'></span>Dashboard</a>
+                <a class="nav-link pb-3" href="categories.html"><span class='bi bi-card-list pe-2'></span>Categories</a>
+                <a class="nav-link pb-3" href="investment.html"><span class='bi bi-cash-coin pe-2'></span>Investments</a>
+                <a class="nav-link pb-3" href="dependent.html"><span class="bi bi-person-circle pe-2"></span>Dependents</a>
+                <a class="nav-link pb-3" href="insights.html"><span class='bi bi-graph-up-arrow pe-2'></span>Insights</a>
+            </nav>
+        </div>
     <div class="col-10">
         <div id="main" class="m-3 p-3 shadow p-3 mb-5 me-3 bg-body rounded bg-white">
-            <div id="formmain" class="m-3 shadow p-3 mb-5 me-3 bg-body rounded" style=" ">
+            <div id="formmain" class="m-3 shadow p-3 mb-5 me-3 bg-body rounded" style=" display:none">
                 <form id="formExpenditure">
                     <div class="mb-3">
                         <label for="expenditureName" class="form-label pe-3">Name:</label>
@@ -64,21 +63,55 @@
                 </form>
             </div>
             <!-- <button class="btn btn-lg btn-primary" onclick="getExpenditure()">getAllExpenditures</button> -->
-            <div id="" class="m-3 p-3 shadow p-3 mb-5 me-3 bg-body rounded">
+            <div id="" class="py-3">
                 <div class="row">
-                    <div class="col-6 text-start">
+                    <div class="col-6 ps-3 text-start">
                         <h4>Expenditure List</h4>
                     </div>
-                    <div class="col-6  bg-white">
-                        <!--<button type="button" class="btn btn-md btn-outline-warning" onclick="addExpenditure()">Add
-                            Expenditure
-                        </button>-->
+                    <div class="col-6  pe-3 text-end bg-white">
+                        <button type="button" class="btn btn-md btn-outline-primary" onclick="addExpenditure()">Add Expenditure
+                        </button>
                     </div>
                 </div>
+            </div>
+            <div class="table-responsive py-5 ">
+
+                <table class="table table-hover ">
+
+                    <thead class="">
+                    <tr>
+                        <th scope="col">S.No</th>
+                        <th scope="col">Expenditure Name</th>
+                        <th scope="col">Expenditure Category</th>
+                        <th scope="col">Amount</th>
+                        <th scope="col">Processed Date</th>
+                        <th scope="col">Processed Time</th>
+                        <th scope="col">Edit</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                    </thead>
+                    <tbody id="tableExpenditureDataContainer" >
+
+                    </tbody>
+
+
+                </table>
+
+
+
             </div>
         </div>
     </div>
 </div>
+</div>
+<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("1rzM6lv9hj6EFg2SP");
+   })();
+</script>
 </body>
 
 </html>
