--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,24 +7,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/mystyles.css">
+    <script src="script/index.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
 
-<body class="shadow p-3 mb-5 me-3 bg-body rounded">
-    <nav class="navbar navbar-expand-lg m-2 bg-light.bg-gradient">
-        <div class="container-fluid row">
-            <a class="navbar-brand col-4 fs-3 text-success" href="index.html">
-                <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
-            </a>
-            <!--<div class="col-8 d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-md btn-outline-primary btn-transparent d-flex">Search<span
-                        class="bi bi-search ps-1"></span></button>
-            </div>-->
+<body onload="getDetails()">
+<nav class="navbar navbar-expand-lg shadow bg-white" id="navmain">
+    <div class="container-fluid row">
+        <a class="navbar-brand col-4 fs-3" href="index.html">
+            <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
+        </a>
+        <div class="col-8 d-flex text-end">
+           <h3 class="">Jayalakshmi</h3>
+            <form method="post">
+                <button type="button" class="btn btn-transparent" onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+            </form>
+
         </div>
-    </nav>
+    </div>
+</nav>
+<div class=" shadow bg-white rounded bg-transparent " id="bodymain">
     <div class="row ps-2 mx-2">
-        <div class="col-3 ps-1 bg.transparent" id="sidebarmain">
+        <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
             <nav class="nav flex-column fs-5">
                 <a class="nav-link pb-3 " href="index.html"><span
                         class="bi bi-house-door pe-2"></span>Home</a>
@@ -38,13 +42,50 @@
                 <a class="nav-link pb-3" href="insights.html"><span class='bi bi-graph-up-arrow pe-2'></span>Insights</a>
             </nav>
         </div>
-        <div class="col-9">
-            
+        <div class="col-10">
+            <div class="row">
+                <div class="col-4" >
+                    <div class="p-4 me-2" id="grid1">
+                        <img class="img-responsive img-fluid p-3" src="images/income.jpg" alt="incomeimg"/>
+                        <h2 class="fs-2">Income</h2>
+                        <h5 id="incomeamount"></h5>
+                    </div>
+                </div>
+                <div class="col-4">
+                <div class="p-4 me-2" id="grid2">
+                    <img class="img-responsive img-fluid p-3" src="images/expenditure.webp" alt="expenditureimg"/>
+                            <h2 class="fs-2">Spends</h2>
+                            <h5  id="expenditureamount"></h5>
+
+                    </div>
+                </div>
+                <div class="col-4">
+                <div class=" p-4 me-2" id="grid3">
+                    <img class="img-responsive img-fluid p-3" src="images/savings.jpg" alt="savingimg"/>
+                            <h2 class="fs-2">Balance</h2>
+                            <h5 id="balanceamount"></h5>
+                    </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+<script src=
+                "https://smtpjs.com/v3/smtp.js">
+</script>
+<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("1rzM6lv9hj6EFg2SP");
+   })();
+</script>
 </body>
 
 </html>
