--- a/src/main/webapp/categories.html
+++ b/src/main/webapp/categories.html
@@ -9,21 +9,25 @@
     <link rel="stylesheet" href="styles/category.css">
     <script src="script/categories.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body onload="getCategories()">
 <nav class="navbar navbar-expand-lg shadow bg-white" id="navmain">
     <div class="container-fluid row">
-        <a class="navbar-brand col-4 fs-3" href="index.html">
+        <a class="navbar-brand col-4 fs-3 " href="index.html">
             <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
         </a>
-        <div class="col-8 d-flex text-end">
-            <h3 class="">Jayalakshmi</h3>
-            <button type="button" class="btn btn-transparent" onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        <div class="col-8">
+            <div class="d-flex float-end">
+            <h3 class="m-auto">Jayalakshmi</h3>
+            <button type="button" class="btn btn-transparent" onclick="getReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
         </div>
+            </div>
     </div>
 </nav>
-<div class=" shadow bg-white rounded bg-transparent " id="bodymain">
+<div class=" shadow bg-white rounded bg-transparent position-relative" id="bodymain">
 <div class="row ps-2 mx-2">
     <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
         <nav class="nav flex-column fs-5">
@@ -39,34 +43,44 @@
             <a class="nav-link pb-3" href="insights.html"><span class='bi bi-graph-up-arrow pe-2'></span>Insights</a>
         </nav>
         </div>
-
         <div class="col-10">
-            <div id="formincomemain" style="display:none" class="m-3shadow p-3 mb-5 me-3 bg-body rounded">
-                <form>
+            <div id="categorymain" class="ps-5 tab-content">
+                <h2 class="text-center fw-bold">Categories</h2>
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-bs-toggle="tab" href="#incomecategory">Income</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="tab" href="#expenditurecategory">Expenditure</a>
+                    </li>
+                </ul>
+                <div id="formincomemain" style="display:none" class="m-3shadow p-3 mb-5 me-3 bg-body rounded">
+                    <form>
                     <h4 class="text-center pb-3">Add Income Category</h4>
                     <div class="mb-3">
                         <label for="incomeCategoryName" class="form-label pe-3">Name:</label>
                         <input type="text" class="form-control" id="incomeCategoryName" placeholder="Enter Category ">
                     </div>
                     <button type="submit" class="btn btn-primary" onclick="submitIncomeCategory()"><span class="bi bi-plus"></span>Add</button>
-                </form>
-            </div>
-            <div id="formexpendituremain" style="display:none" class="m-3 shadow p-3 mb-5 me-3 bg-body rounded">
-                <form>
-                    <h4 class="text-center pb-3">Add Expenditure Category</h4>
-                    <div class="mb-3">
-                        <label for="expenditureCategoryName" class="form-label pe-3">Name:</label>
-                        <input type="text" class="form-control" id="expenditureCategoryName" placeholder="Enter Category Name">
-                    </div>
-                    <button type="submit" class="btn btn-primary" onclick="submitExpenditureCategory()"><span class="bi bi-plus"></span>Add</button>
-                </form>
-            </div>
-            <div id="categorymain" class="ps-5">
-              <div id="incomecategory" class="row py-5 shadow p-3 mb-5 me-3 bg-body rounded">
-                 <div class="col-6"><h2 class=" ps-3 text-primary fs-4">Income Categories</h2></div>
-                  <div class="col-6 text-end pe-3"><button type="button" class="col-6 btn btn-md btn-outline-primary" onclick="addIncomeCategory()">Add Category</button></div>
-                  <div class="table-responsive py-3 ">
-                      <table class="table table-hover ">
+                    </form>
+                </div>
+                <div id="formexpendituremain" style="display:none;" class="m-3 shadow p-3 mb-5 me-3 bg-body rounded">
+                    <form>
+                        <h4 class="text-center pb-3">Add Expenditure Category</h4>
+                        <div class="mb-3">
+                            <label for="expenditureCategoryName" class="form-label pe-3">Name:</label>
+                            <input type="text" class="form-control" id="expenditureCategoryName" placeholder="Enter Category Name">
+                        </div>
+                        <button type="submit" class="btn btn-primary" onclick="submitExpenditureCategory()"><span class="bi bi-plus"></span>Add</button>
+                    </form>
+                </div>
+              <div id="incomecategory" class="container tab-pane active row py-5 shadow p-3 mb-5 me-3 bg-body rounded">
+                 <div class="row pb-3">
+                  <div class="col-6"><h2 class="fw-bold ps-3 fs-3 ">Income Categories</h2></div>
+                  <div class="col-6 text-end pe-3"><button type="button" class="col-6 btn btn-lg btn-outline-primary" onclick="addIncomeCategory()">Add Category</button></div>
+                  </div>
+                     <div class="table-responsive py-3 ">
+                      <table class="table table-hover table-striped">
                           <thead class="">
                           <tr>
                               <th scope="col">S.No</th>
@@ -79,11 +93,13 @@
                       </table>
                   </div>
               </div>
-                <div id="expenditurecategory" class="row py-5 shadow p-3 mb-5 me-3 bg-body rounded">
-                    <div class="col-6 "><h2 class=" text-primary fs-4">Expenditure Categories</h2></div>
-              <div class="col-6 text-end"><button type="button" class="col-6 btn btn-md btn-outline-primary " onclick="addExpenditureCategory()">Add Category</button></div>
-                    <div class="table-responsive py-3 ">
-                        <table class="table table-hover ">
+                <div id="expenditurecategory" class="container tab-pane fade row py-5 shadow p-3 mb-5 me-3 bg-body rounded">
+                    <div class="row pb-3">
+                    <div class="col-6"><h2 class=" fw-bold ps-3 fs-3 ">Expenditure Categories</h2></div>
+                    <div class="col-6 text-end pe-3"><button type="button" class="col-6 btn btn-lg btn-outline-primary" onclick="addExpenditureCategory()">Add Category</button></div>
+                        </div>
+                    <div class="table-responsive  py-3 ">
+                        <table class="table table-hover table-striped ">
                             <thead class="">
                             <tr>
                                 <th scope="col">S.No</th>
@@ -100,6 +116,15 @@
    </div>
         </div>
     </div>
+    </div>
+</div>
+<div class="toast position-absolute top-0 end-0 text-success">
+    <div class="toast-header ">
+        <strong class="me-auto">EMAIL STATUS</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+    </div>
+    <div class="toast-body">
+        <p><span class='bi bi-check2-circle'></span>Email sent successfully</p>
     </div>
 </div>
     <script src="script/categories.js"></script>
