--- a/src/main/webapp/dashboard.html
+++ b/src/main/webapp/dashboard.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles/mystyles.css">
     <script src="script/dashboard.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body >
@@ -17,13 +19,15 @@
         <a class="navbar-brand col-4 fs-3" href="index.html">
             <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
         </a>
-        <div class="col-8 d-flex text-end">
-            <h3 class="">Jayalakshmi</h3>
-            <button type="button" class="btn btn-transparent" onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        <div class="col-8">
+            <div class="d-flex float-end">
+            <h3 class="m-auto">Jayalakshmi</h3>
+            <button type="button" class="btn btn-transparent" onclick="getReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        </div>
         </div>
     </div>
 </nav>
-<div class=" shadow bg-white rounded bg-transparent " id="bodymain">
+<div class=" shadow bg-white rounded bg-transparent position-relative" id="bodymain">
     <div class="row ps-2 mx-2">
         <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
             <nav class="nav flex-column fs-5">
@@ -40,16 +44,36 @@
             </nav>
         </div>
     <div class="col-10">
-        <div class="p-5 shadow p-3 mb-5 me-3 bg-body rounded">
-            <h4 class="text-center">Months Expenditure's</h4>
-            <canvas id="myExpenditurePie" style="width:100%;max-width:600px"></canvas>
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" data-bs-toggle="tab" href="#expenditure">Expenditure</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#income">Income</a>
+            </li>
+
+        </ul>
+        <div class="tab-content">
+        <div id="expenditure" class="p-5 shadow p-3 mb-5 me-3 bg-body rounded container tab-pane active">
+            <h4 class="text-center fs-3 fw-bold pb-3">Months Expenditure's</h4>
+            <canvas id="myExpenditurePie" class="m-auto" style="width:100%;max-width:600px"></canvas>
         </div>
-        <div class="p-5 shadow p-3 mb-5 me-3 bg-body rounded">
-            <h4 class="text-center">Months Income's</h4>
-            <canvas id="myIncomePie" style="width:100%;max-width:600px"></canvas>
+        <div id="income" class="p-5 shadow p-3 mb-5 me-3 bg-body rounded container tab-pane fade">
+            <h4 class="text-center fs-3 fw-bold pb-3">Months Income's</h4>
+            <canvas id="myIncomePie" class="m-auto" style="width:100%;max-width:600px"></canvas>
+        </div>
         </div>
     </div>
 </div>
+</div>
+<div class="toast position-absolute top-0 end-0 text-success">
+    <div class="toast-header ">
+        <strong class="me-auto">EMAIL STATUS</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+    </div>
+    <div class="toast-body">
+        <p><span class='bi bi-check2-circle'></span>Email sent successfully</p>
+    </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <script type="text/javascript"
