--- a/src/main/webapp/expenditure.html
+++ b/src/main/webapp/expenditure.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/expenditure.css">
     <script src="script/expenditure.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body  onload="getExpenditure()">
 <nav class="navbar navbar-expand-lg shadow bg-white" id="navmain">
@@ -15,13 +17,15 @@
         <a class="navbar-brand col-4 fs-3" href="index.html">
             <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
         </a>
-        <div class="col-8 d-flex text-end">
-            <h3 class="">Jayalakshmi</h3>
-            <button type="button" class="btn btn-transparent"  onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        <div class="col-8">
+            <div class="d-flex float-end">
+            <h3 class="m-auto">Jayalakshmi</h3>
+            <button type="button" class="btn btn-transparent"  onclick="getReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        </div>
         </div>
     </div>
 </nav>
-<div class=" shadow  bg-white rounded bg-transparent " id="bodymain">
+<div class=" shadow  bg-white rounded bg-transparent position-relative" id="bodymain">
     <div class="row ps-2 mx-2">
         <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
             <nav class="nav flex-column fs-5">
@@ -51,7 +55,7 @@
                         <input type="text" class="form-control" id="expenditureCategory"
                                placeholder="Enter Expenditure category">
                     </div>
-                    <div class="mb-3 form-check">
+                    <div class="mb-3">
                         <label class="form-label pe-3" for="expenditureAmount">Amount:</label>
                         <input type="number" class="form-control" id="expenditureAmount"
                                placeholder="Enter Expenditure Amount">
@@ -63,10 +67,10 @@
                 </form>
             </div>
             <!-- <button class="btn btn-lg btn-primary" onclick="getExpenditure()">getAllExpenditures</button> -->
-            <div id="" class="py-3">
+            <div id="datamain" class="py-3">
                 <div class="row">
-                    <div class="col-6 ps-3 text-start">
-                        <h4>Expenditure List</h4>
+                    <div class="col-6 ps-3 fs-3 fw-bold text-start">
+                        <h4 class="fs-3 fw-bold">Expenditure List</h4>
                     </div>
                     <div class="col-6  pe-3 text-end bg-white">
                         <button type="button" class="btn btn-md btn-outline-primary" onclick="addExpenditure()">Add Expenditure
@@ -103,6 +107,15 @@
         </div>
     </div>
 </div>
+</div>
+<div class="toast position-absolute top-0 end-0 text-success">
+    <div class="toast-header ">
+        <strong class="me-auto">EMAIL STATUS</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+    </div>
+    <div class="toast-body">
+        <p ><span class='bi bi-check2-circle'></span>Email sent successfully</p>
+    </div>
 </div>
 <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
