--- a/src/main/webapp/income.html
+++ b/src/main/webapp/income.html
@@ -8,6 +8,8 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/income.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body onload="getIncome()">
@@ -16,13 +18,15 @@
         <a class="navbar-brand col-4 fs-3" href="index.html">
             <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
         </a>
-        <div class="col-8 d-flex text-end">
-            <h3 class="">Jayalakshmi</h3>
-            <button type="button" class="btn btn-transparent" onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        <div class="col-8">
+            <div class="d-flex float-end">
+            <h3 class="m-auto">Jayalakshmi</h3>
+            <button type="button" class="btn btn-transparent" onclick="getReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        </div>
         </div>
     </div>
 </nav>
-<div class=" shadow bg-white rounded bg-transparent " id="bodymain">
+<div class=" shadow bg-white rounded bg-transparent position-relative" id="bodymain">
     <div class="row ps-2 mx-2">
         <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
             <nav class="nav flex-column fs-5">
@@ -41,30 +45,30 @@
         <div class="col-10">
             <!-- <button class="btn btn-lg btn-primary" onclick="getIncome()">getAllIncomes</button> -->
             <div id="main" class="m-3 p-3 shadow p-3 mb-5 me-3 bg-body rounded bg-white">
-                <div id="formmain" class="m-3 shadow p-3 mb-5 me-3 bg-body rounded" style="display:none; ">
-                    <form id="formIncome" >
-                        <div class="mb-3">
-                            <label for="incomeName" class="form-label pe-3">Name:</label>
-                            <input type="text" class="form-control" id="incomeName" placeholder="Enter Income Name">
-                        </div>
-                        <div class="mb-3">
-                            <label for="incomeCategory" class="form-label pe-3">Category:</label>
-                            <input type="text" class="form-control" id="incomeCategory"
-                                placeholder="Enter Income category">
-                        </div>
-                        <div class="mb-3 form-check">
-                            <label class="form-label pe-3" for="incomeAmount">Amount:</label>
-                            <input type="number" class="form-control" id="incomeAmount"
-                                placeholder="Enter Income Amount">
+                    <div id="formmain" class="m-3 p-3 shadow p-3 mb-5 me-3 bg-body rounded bg-white" style="display:none; ">
+                        <form id="formIncome" >
+                            <div class="mb-3">
+                                <label for="incomeName" class="form-label pe-3">Name:</label>
+                                <input type="text" class="form-control" id="incomeName" placeholder="Enter Income Name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="incomeCategory" class="form-label pe-3">Category:</label>
+                                <input type="text" class="form-control" id="incomeCategory"
+                                       placeholder="Enter Income category">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label pe-3" for="incomeAmount">Amount:</label>
+                                <input type="number" class="form-control" id="incomeAmount"
+                                       placeholder="Enter Income Amount">
 
-                        </div>
-                        <button type="submit" class="btn btn-primary" onclick="submitIncome()"><span class="bi bi-plus"></span>Add</button>
-                    </form>
-                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary" onclick="submitIncome()"><span class="bi bi-plus"></span>Add</button>
+                        </form>
+                    </div>
+                        <div id="datamain">
                 <div class="row bg-white py-3">
-
                     <div class="col-6">
-                        <h4 class="ps-3">Income List</h4>
+                        <h4 class="ps-3 fs-3 fw-bold">Income List</h4>
                     </div>
                     <div class="col-6 text-end bg-white pe-3">
                    <button type="button" class="btn btn-md btn-outline-primary" onclick="addIncome()">Add Income</button>
@@ -72,7 +76,7 @@
                 </div>
                 <div class="table-responsive py-5 ">
 
-                    <table class="table table-hover shadow p-3 mb-5 me-3 bg-body rounded bg-white">
+                    <table class="table table-hover bg-white table-striped">
 
                         <thead class="">
                         <tr>
@@ -93,13 +97,24 @@
 
                     </table>
 
-
+                </div>
+                        </div>
 
                 </div>
             </div>
         </div>
     </div>
 </div>
+<div  class="toast position-absolute top-0 end-0 text-success">
+    <div class="toast-header ">
+        <strong class="me-auto">EMAIL STATUS</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+    </div>
+    <div class="toast-body">
+        <p><span class='bi bi-check2-circle'></span>Email sent successfully</p>
+    </div>
+</div>
+<div id="snackbar"><h3 class="bg-dark">Income Added</h3></div>
 <script src="script/income.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
