--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles/mystyles.css">
     <script src="script/index.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body onload="getDetails()">
@@ -17,16 +19,17 @@
         <a class="navbar-brand col-4 fs-3" href="index.html">
             <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
         </a>
-        <div class="col-8 d-flex text-end">
-           <h3 class="">Jayalakshmi</h3>
+        <div class="col-8">
+            <div class="d-flex float-end">
+           <h3 class="m-auto">Jayalakshmi</h3>
             <form method="post">
-                <button type="button" class="btn btn-transparent" onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+                <button type="button" class="btn btn-transparent" onclick="getReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
             </form>
-
+            </div>
         </div>
     </div>
 </nav>
-<div class=" shadow bg-white rounded bg-transparent " id="bodymain">
+<div class=" shadow bg-white rounded bg-transparent position-relative" id="bodymain">
     <div class="row ps-2 mx-2">
         <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
             <nav class="nav flex-column fs-5">
@@ -47,14 +50,14 @@
                 <div class="col-4" >
                     <div class="p-4 me-2" id="grid1">
                         <img class="img-responsive img-fluid p-3" src="images/income.jpg" alt="incomeimg"/>
-                        <h2 class="fs-2">Income</h2>
+                        <h2 class="fs-2 fw-bold">Income</h2>
                         <h5 id="incomeamount"></h5>
                     </div>
                 </div>
                 <div class="col-4">
                 <div class="p-4 me-2" id="grid2">
                     <img class="img-responsive img-fluid p-3" src="images/expenditure.webp" alt="expenditureimg"/>
-                            <h2 class="fs-2">Spends</h2>
+                            <h2 class="fs-2 fw-bold">Spends</h2>
                             <h5  id="expenditureamount"></h5>
 
                     </div>
@@ -62,13 +65,23 @@
                 <div class="col-4">
                 <div class=" p-4 me-2" id="grid3">
                     <img class="img-responsive img-fluid p-3" src="images/savings.jpg" alt="savingimg"/>
-                            <h2 class="fs-2">Balance</h2>
+                            <h2 class="fs-2 fw-bold">Balance</h2>
                             <h5 id="balanceamount"></h5>
                     </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="toast position-absolute top-0 end-0 text-success">
+    <div class="toast-header ">
+        <strong class="me-auto">EMAIL STATUS</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+    </div>
+    <div class="toast-body">
+        <p><span class='bi bi-check2-circle'></span>Email sent successfully</p>
     </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
