--- a/src/main/webapp/investment.html
+++ b/src/main/webapp/investment.html
@@ -7,8 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/investment.css">
-    <script src="script/investment.js"></script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body  onload="getInvestment()">
@@ -17,13 +19,15 @@
         <a class="navbar-brand col-4 fs-3" href="index.html">
             <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
         </a>
-        <div class="col-8 d-flex text-end">
-            <h3 class="">Jayalakshmi</h3>
-            <button type="button" class="btn btn-transparent"  onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        <div class="col-8">
+            <div class="d-flex float-end">
+            <h3 class="m-auto">Jayalakshmi</h3>
+            <button type="button" class="btn btn-transparent"  onclick="getReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        </div>
         </div>
     </div>
 </nav>
-<div class=" shadow  bg-white rounded bg-transparent " id="bodymain">
+<div class=" shadow  bg-white rounded bg-transparent position-relative" id="bodymain">
     <div class="row ps-2 mx-2">
         <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
             <nav class="nav flex-column fs-5">
@@ -53,19 +57,19 @@
                             <input type="text" class="form-control" id="investmentCategory"
                                 placeholder="Enter Investment category">
                         </div>
-                        <div class="mb-3 form-check">
+                        <div class="mb-3 form-label">
                             <label class="form-label pe-3" for="investmentAmount">Amount:</label>
                             <input type="number" class="form-control" id="investmentAmount"
                                 placeholder="Enter Investment Amount">
 
                         </div>
-                        <div class="mb-3 form-check">
+                        <div class="mb-3 form-label">
                             <label class="form-label pe-3" for="investmentDate">Date:</label>
                             <input type="text" class="form-control" id="investmentDate"
                                    placeholder="Enter Investment Start Date">
 
                         </div>
-                        <div class="mb-3 form-check">
+                        <div class="mb-3 form-label">
                             <label class="form-label pe-3" for="investmentYear">Year:</label>
                             <input type="number" class="form-control" id="investmentYear"
                                    placeholder="Enter Investment Expiry Year">
@@ -74,9 +78,10 @@
                         <button type="submit" class="btn btn-primary" onclick="submitInvestment()"><span class="bi bi-plus"></span>Add</button>
                     </form>
                 </div>
+                <div id="investmentbody">
                 <div class="row">
                     <div class="col-6">
-                        <h4>Investment List</h4>
+                        <h4 class="fs-3 fw-bold">Investment List</h4>
                     </div>
                     <div class="col-6 text-end bg-white">
                     <button type="button" class="btn btn-md btn-outline-primary" onclick="addInvestment()">Add Investment</button>
@@ -84,7 +89,7 @@
                 </div>
                 <div class="table-responsive py-5 ">
 
-                    <table class="table table-hover ">
+                    <table class="table table-hover table-striped">
 
                         <thead class="">
                         <tr>
@@ -105,10 +110,21 @@
 
                     </table>
                 </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+<div class="toast position-absolute top-0 end-0 text-success">
+    <div class="toast-header ">
+        <strong class="me-auto">EMAIL STATUS</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+    </div>
+    <div class="toast-body">
+        <p><span class='bi bi-check2-circle'></span>Email sent successfully</p>
+    </div>
+</div>
+<script src="script/investment.js"></script>
 <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
 </script>
