--- a/src/main/webapp/savings.html
+++ b/src/main/webapp/savings.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles/savings.css">
     <script src="script/savings.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body  onload="getSavings()">
@@ -17,13 +19,15 @@
         <a class="navbar-brand col-4 fs-3" href="index.html">
             <img class="brandlogo" src="images/brand.png" alt="brandlogo" />Wallet
         </a>
-        <div class="col-8 d-flex text-end">
-            <h3 class="">Jayalakshmi</h3>
-            <button type="button" class="btn btn-transparent" onclick="getMonthlyReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        <div class="col-8">
+            <div class="d-flex float-end">
+            <h3 class="m-auto">Jayalakshmi</h3>
+            <button type="button" class="btn btn-transparent" onclick="getReport()"><img class="" id="userimg" src="images/jaya.jpg" alt="userimage"/></button>
+        </div>
         </div>
     </div>
 </nav>
-<div class=" shadow bg-white rounded bg-transparent " id="bodymain">
+<div class=" shadow bg-white rounded bg-transparent position-relative" id="bodymain">
     <div class="row ps-2 mx-2">
         <div class="col-2 ps-1 bg-transparent" id="sidebarmain">
             <nav class="nav flex-column fs-5">
@@ -41,9 +45,30 @@
         </div>
         <div class="col-10">
             <div class="p-5 m-3 shadow bg-white rounded">
-            <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+                <div class="">
+                    <h2 class="text-warning text-center fw-bold pb-3">Month's Saving</h2>
+                    <!--<form>-->
+                        <div class=" forminsights text-center">
+                            <div class="d-flex pb-3">
+                            <label for="savingYear" class="form-label pe-2">Year:</label>
+                            <input type="number" class="form-control" id="savingYear" placeholder="Enter Year"/>
+                            </div>
+                            <span><button class="ps-2 btn btn-sm btn-outline-primary" onclick="getSavings()" >View Savings</button></span>
+                        </div>
+                  <!--  </form>-->
+                </div>
+            <canvas id="myChart" class="mx-auto my-5" style="width:100%;max-width:700px"></canvas>
             </div>
         </div>
+    </div>
+</div>
+<div class="toast position-absolute top-0 end-0 text-success">
+    <div class="toast-header ">
+        <strong class="me-auto">EMAIL STATUS</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+    </div>
+    <div class="toast-body">
+        <p><span class='bi bi-check2-circle'></span>Email sent successfully</p>
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
